welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while( ! positionFinale()){
         ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()) return true
                               ^SnakeBuggle:13: warning: enclosing method positionFinale has result type Unit: return value discarded
      if (estFaceMur()) return true
                        ^SnakeBuggle:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()) return true
                               ^SnakeBuggle:16: warning: enclosing method positionFinale has result type Unit: return value discarded
      if (estFaceMur()) return true
                        ^SnakeBuggle:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:19: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^